src/components/DishItems/Dishitems.css
.dishes-container {
  display: flex;
  gap: 1.5rem;
  margin-top: 5px;
  overflow-x: auto;
  padding: 15px 0;
  -webkit-overflow-scrolling: touch; /* Enables smooth scrolling on mobile */
}

.dishes-container::-webkit-scrollbar {
  display: none;
}

.dish-item {
  transition: transform 0.2s ease-in-out;
  text-align: center;
  gap: 10px;
  
}
.img-wrapper{
    height: 133px;
    overflow-y: hidden;
    border-radius: 35px;
}
.dishes {
  display: flex;
  flex-direction: column;
}

.dish-item:hover {
  transform: scale(0.85);
}

.dish-img {
  width: 140px;
}

.prev-arrow,.next-arrow{
    transform: scale(1.5);
    margin: 0 10px;
}
.prev-arrow:hover,.next-arrow:hover{
    cursor: pointer;
    transform: scale(2);
    transition: transform 0.2s ease-in-out;
}

@media only screen and (max-width: 768px) and (min-width: 200px) {
    .prev-arrow,.next-arrow{
        transform: scale(1.1);
    }

    .prev-arrow:hover,.next-arrow:hover{
        transform: scale(1.2);
    }

    .dishes>h3{
      font-size: 15px;
    }

}

